--- a/main.html
+++ b/main.html
@@ -3,8 +3,12 @@
 	<meta charset="UTF-8">
 	<title>Personal Diary</title>
         <script>
+		//VARIABLES
 		var appointmentArr = [];
-			    
+		
+		//CONSTANTS
+		
+		//FUNCTIONS 
           	//Creates an appointment objects using the details input by user and stores all appointments in an array 
 		function assignAppointmentToArray(priority, date, start, end, code, location) {
 			appointmentArr[i] = {
@@ -16,6 +20,8 @@
 				locationOfAppointment: location
 			}; 	
 		}
+		
+		//MAIN CODE
         </script>
     </head>
     <body>
