--- a/main.html
+++ b/main.html
@@ -25,5 +25,64 @@
         </script>
     </head>
     <body>
+	    		<h1>Personal Diary</h1>
+<table bgcolor="#ccccc" cellpadding="5" cellspacing="0">
+    <tr>
+        <td valign="top" align="right">Priority</td>
+        <td>
+            <input type="radio"  id="high" name="priority" checked />High<br />
+            <input type="radio"  id="low" name="priority" />Low<br />
+        </td>
+    </tr>
+    <tr>
+        <td align="right">Course Code</td>
+        <td><input type="text"  id="code" /></td>
+    </tr>
+    <tr>
+        <td align="right">Location</td>
+        <td><input type="text"  id="location"  /></td>
+    </tr>
+    <tr>
+        <td align="right">Date</td>
+        <td><input type="text"  id="date"  /></td>
+    </tr>
+    <tr>
+        <td align="right">Start Time</td>
+        <td>
+            <select id="start">
+                <option value="0800">0800</option>
+                <option value="0900">0900</option>
+                <option value="1000">1000</option>
+                <option value="1100">1100</option>
+                <option value="1200">1200</option>
+                <option value="1300">1300</option>
+                <option value="1400">1400</option>
+                <option value="1500">1500</option>
+                <option value="1600">1600</option>
+                <option value="1700">1700</option>
+                <option value="1800">1800</option>
+            </select>
+        </td>
+        <td align="left">End Time</td>
+        <td>
+            <select id="end">
+                <option value="0800">0800</option>
+                <option value="0900">0900</option>
+                <option value="1000">1000</option>
+                <option value="1100">1100</option>
+                <option value="1200">1200</option>
+                <option value="1300">1300</option>
+                <option value="1400">1400</option>
+                <option value="1500">1500</option>
+                <option value="1600">1600</option>
+                <option value="1700">1700</option>
+                <option value="1800">1800</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+        <td><input type="button"  value="Add Appointment" onclick="addAppointment()" /></td>
+    </tr>
     </body>
 </html>
