--- a/main.html
+++ b/main.html
@@ -1,8 +1,9 @@
+
 <html>
     <head>
-	<meta charset="UTF-8">
-	<title>Personal Diary</title>
-        <script>
+		<meta charset="UTF-8">
+		<title>Personal Diary</title>
+		<script>
 		//VARIABLES
 		var appointmentArr = [];
 		
@@ -22,67 +23,187 @@
 		}
 		
 		//MAIN CODE
-        </script>
+		</script>
+			<style>
+			div {
+				border-radius: 5px;
+				background-color: #ccc;
+			}
+			
+			* {
+				box-sizing: border-box;
+			}
+			.col-1 {
+				float: left;
+				width: 15%;
+				padding: 20px;
+			}
+
+			.col-2 {
+				float: left;
+				width: 85%;
+				padding: 20px;
+			}
+			.row:after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+			input[type=text] {
+				width: 100%;
+				padding: 12px;
+				border: 5px solid #ccc;
+				border-radius: 10px;
+			}
+			input[type=radio] {
+				padding: 12px;
+			}
+			input[id=date] {
+				width: 100%;
+				padding: 12px;
+				border: 5px solid #ccc;
+				border-radius: 10px;
+			}
+			.wrapperradio {
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+				padding: 12px;
+			}
+			.radio1 {
+				grid-column-start: 1; 
+				grid-column-end: 1; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				text-align: center;
+			}
+			.radio2 {
+				grid-column-start: 2; 
+				grid-column-end: 2; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				text-align: center;
+			}
+			.wrapperdropdown {
+				display: grid;
+				grid-template-columns: 1fr 1fr 1fr;
+			}
+			.date1{
+				grid-column-start: 1; 
+				grid-column-end: 1; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+			}
+			.select1{
+				grid-column-start: 2; 
+				grid-column-end: 2; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+			}
+			.select2{
+				grid-column-start: 3; 
+				grid-column-end: 3; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				display: grid;
+				grid-template-columns: 1fr 1fr;
+			}
+			.selectlabel{
+				grid-column-start: 1; 
+				grid-column-end: 1; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				padding: 12px 0px 12px 0;
+				text-align: center;
+			}
+			.selectbody{
+				grid-column-start: 2; 
+				grid-column-end: 2; 
+				grid-row-start: 1; 
+				grid-row-end: 1; 
+				padding: 12px 0px 12px 0;
+			}
+			label[id="type1"] {
+				width: 100%;
+				padding: 15px 0px 14px 0;
+				display: inline-block;
+				text-align: right;
+			}
+			
+
+		</style>
     </head>
     <body>
-	    		<h1>Personal Diary</h1>
-<table bgcolor="#ccccc" cellpadding="5" cellspacing="0">
-    <tr>
-        <td valign="top" align="right">Priority</td>
-        <td>
-            <input type="radio"  id="high" name="priority" checked />High<br />
-            <input type="radio"  id="low" name="priority" />Low<br />
-        </td>
-    </tr>
-    <tr>
-        <td align="right">Course Code</td>
-        <td><input type="text"  id="code" /></td>
-    </tr>
-    <tr>
-        <td align="right">Location</td>
-        <td><input type="text"  id="location"  /></td>
-    </tr>
-    <tr>
-        <td align="right">Date</td>
-        <td><input type="text"  id="date"  /></td>
-    </tr>
-    <tr>
-        <td align="right">Start Time</td>
-        <td>
-            <select id="start">
-                <option value="0800">0800</option>
-                <option value="0900">0900</option>
-                <option value="1000">1000</option>
-                <option value="1100">1100</option>
-                <option value="1200">1200</option>
-                <option value="1300">1300</option>
-                <option value="1400">1400</option>
-                <option value="1500">1500</option>
-                <option value="1600">1600</option>
-                <option value="1700">1700</option>
-                <option value="1800">1800</option>
-            </select>
-        </td>
-        <td align="left">End Time</td>
-        <td>
-            <select id="end">
-                <option value="0800">0800</option>
-                <option value="0900">0900</option>
-                <option value="1000">1000</option>
-                <option value="1100">1100</option>
-                <option value="1200">1200</option>
-                <option value="1300">1300</option>
-                <option value="1400">1400</option>
-                <option value="1500">1500</option>
-                <option value="1600">1600</option>
-                <option value="1700">1700</option>
-                <option value="1800">1800</option>
-            </select>
-        </td>
-    </tr>
-    <tr>
-        <td></td>
-        <td><input type="button"  value="Add Appointment" onclick="addAppointment()" /></td>
-    </tr>
+		<form>
+			<h1 align='center'>Personal Diary</h1>
+			<div class="row">
+				<div class="col-1">
+					<label id="type1" for="priority">Priority:</label></br>
+					<label id="type1" for="subject">Subject:</label></br>
+					<label id="type1" for="venue">Venue:</label></br>
+					<label id="type1" for="date">Date:</label></br>
+				</div>
+				<div class="col-2">
+					<div class="wrapperradio">
+						<div class="radio1">
+							<input type="radio"  name="priority" value="1" checked />High
+						</div>
+						<div class="radio2">
+							<input type="radio"  name="priority" value="2"/>Low
+						</div>
+					</div>
+					<input type="text"  id="subject" />
+					<input type="text"  id="venue"  />
+					<div class="wrapperdropdown">
+						<div class="date1">
+							<input type="text"  id="date"  />
+						</div>
+						<div class="select1">
+							<div class="selectlabel">
+								<label id="type2" for="select">Start Time</label>
+							</div>
+							<div class="selectbody">
+								<select id="select">
+									<option value="0800">0800</option>
+									<option value="0900">0900</option>
+									<option value="1000">1000</option>
+									<option value="1100">1100</option>
+									<option value="1200">1200</option>
+									<option value="1300">1300</option>
+									<option value="1400">1400</option>
+									<option value="1500">1500</option>
+									<option value="1600">1600</option>
+									<option value="1700">1700</option>
+									<option value="1800">1800</option>
+								</select>
+							</div>
+						</div>
+						<div class="select2">
+							<div class="selectlabel">
+								<label id="type2" for="select">End Time</label>
+							</div>
+							<div class="selectbody">
+								<select id="end">
+									<option value="0800">0800</option>
+									<option value="0900">0900</option>
+									<option value="1000">1000</option>
+									<option value="1100">1100</option>
+									<option value="1200">1200</option>
+									<option value="1300">1300</option>
+									<option value="1400">1400</option>
+									<option value="1500">1500</option>
+									<option value="1600">1600</option>
+									<option value="1700">1700</option>
+									<option value="1800">1800</option>
+								</select>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<h2 align='center'><input type="button"  value="Add Appointment" onclick="addAppointment()"/></h2>
+		</form>
     </body>
 </html>
+
