--- a/workingMain.html
+++ b/workingMain.html
@@ -28,7 +28,7 @@
 		//Stores user input data into temp variables for validation prior to being added to the appointment array.
 		function newAppointment() {
 			//document.getElementById('priorityHigh').checked;
-			if(document.getElementById('priorityHigh').checked = true ){
+			if(document.getElementById('priorityHigh').checked == true ){
 				newPriority = "High";
 			}else{newPriority = "Low";}
 			newDate = document.getElementById('date').value;
@@ -178,10 +178,10 @@
 				<div class="col-2">
 					<div class="wrapperradio">
 						<div class="radio1">
-							<input type="radio" id="priorityHigh"  value="High" checked />High
+							<input type="radio" id="priorityHigh"  name='priorityCheck" value="High"  checked />High
 						</div>
-						<div class="radio2">
-							<input type="radio" id="priorityLow"  value="Low" />Low
+						<div class="radio2"> 
+							<input type="radio" id="priorityLow" name="priorityCheck" value="Low" />Low
 						</div>
 					</div>
 					<input type="text"  id="subject" />
