Added isValidDate() function

--- a/workingMain.html
+++ b/workingMain.html
@@ -19,7 +19,7 @@
 		//When user clicks Add Appointment button appointment details are stored to temp variables, input data is validated, stored to appointment array and IDE tables updated.
 		function addAppointment() {
 			newAppointment();
-			//isValidDate();
+			isValidDate();
 			//isValidTime();
 			//isConcurrentAppointment();
 			assignAppointmentToArray(newPriority,newDate,newStart,newEnd,newSubject,newVenue);
