--- a/isConcurrentAppintment.html
+++ b/isConcurrentAppintment.html
@@ -57,7 +57,7 @@ var timeArray = new Array(newAppt[1], newAppt[2], newAppt[3]);
 for (var i=0; i< appointmentArr.length; i++) {
 
 
-      if ((appointmentArr[i].date == newDate) && (appointmentArr[i+1].start == newStart)){
+      if ((appointmentArr[i].date == newDate) && (appointmentArr[i].start == newStart)){
       apptConcurrent == true;
       alert('Concurrent with another appointment');
       }
@@ -65,7 +65,7 @@ for (var i=0; i< appointmentArr.length; i++) {
       apptConcurrent == false;
       }
       
-      if((appointmentArr[i].date == newDate) && ((appointmentArr[i+2] - appointmentArr[i+1]) > (appointmentArr[i+2] - newStart)) {
+      if((appointmentArr[i].date == newDate) && ((appointmentArr[i].end - appointmentArr[i].start) > (appointmentArr[i].end - newStart)) {
       apptConcurrent == true;
       alert('Concurrent with another appointment');
       }
@@ -79,7 +79,7 @@ for (var i=0; i< appointmentArr.length; i++) {
 for (var i=0; i< appointmentArr.length; i++) {
 
 
-      if ((appointmentArr[i].date == newDate) && (appointmentArr[i+1].end == newEnd)){
+      if ((appointmentArr[i].date == newDate) && (appointmentArr[i].end == newEnd)){
       apptConcurrent == true;
       alert('Concurrent with another appointment');
       }
@@ -87,7 +87,7 @@ for (var i=0; i< appointmentArr.length; i++) {
       apptConcurrent == false;
       }
       
-      if((appointmentArr[i].date == newDate) && ((appointmentArr[i+2] - appointmentArr[i+1]) > (appointmentArr[i+2] - newEnd)) {
+      if((appointmentArr[i].date == newDate) && ((appointmentArr[i].end - appointmentArr[i].start) > (appointmentArr[i].end - newEnd)) {
       apptConcurrent == true;
       alert('Concurrent with another appointment');
       }
