--- a/sortAppointments.html
+++ b/sortAppointments.html
@@ -37,7 +37,7 @@
 
             while ((appointmentArr[i].priorityStatus == 'High') && (appointmentArr[i+1].priorityStatus == 'Low')) { 
             // Have a problem here where appointmentArr[i] is coming up as undefined in debugger//
-            //Sort plan
+            //Sort plan//
                 var temp = appointmentArr[i];
                 appointmentArr[i] = appointmentArr[i+1];
                 appointmentArr[i+1] = temp;
