--- a/workingMain.html
+++ b/workingMain.html
@@ -12,157 +12,203 @@
 		var newSubject = '';
 		var newVenue = '';
 		var i = 0;
-		var validDate = false;
-		var timeValid;
+		
 		//CONSTANTS
-		const VALID_START = 700;
-		const VALID_END = 1900;
 		//FUNCTIONS 
           	
 		//When user clicks Add Appointment button appointment details are stored to temp variables, input data is validated, stored to appointment array and IDE tables updated.
 		function addAppointment() {
-			newAppointment();
-			isValidDate();
-			isValidTime();
-			//isConcurrentAppointment();
-			assignAppointmentToArray(newPriority,newDate,newStart,newEnd,newSubject,newVenue);
-			showAppointment();
-		}
-		//Stores user input data into temp variables for validation prior to being added to the appointment array.
-		function newAppointment() {
-			//document.getElementById('priorityHigh').checked;
-			if(document.getElementById('priorityHigh').checked == true ){
-				newPriority = "High";
-			}else{newPriority = "Low";}
+			newPriority = document.getElementById('priorityHigh').checked;
+			if (newPriority == true) {
+				newPriority = 'high';
+			} else {
+				newPriority = 'low';
+			}
 			newDate = document.getElementById('date').value;
 			newStart = parseInt(document.getElementById('start').value);
 			newEnd = parseInt(document.getElementById('end').value);
 			newSubject = document.getElementById('subject').value;
 			newVenue = document.getElementById('venue').value;
-			
+			if(isValidDate(newDate) == true && isValidTime(newStart, newEnd) == true && isConcurrentAppointment(newDate, newStart, newEnd) == false) {
+				appointmentArr[appointmentArr.length] = {
+					priorityStatus: newPriority,
+					dateOfAppointment: newDate,
+					startTime: newStart,
+					endTime: newEnd,
+					subject: newSubject,
+					venue: newVenue
+				}; 	
+				showAppointment()
+			}
 		}
-		
-		//Creates an appointment objects using the details input by user and stores all appointments in an array 
-		function assignAppointmentToArray(priority, date, start, end, code, location) {
-			appointmentArr[i] = {
-				priorityStatus: priority,
-				dateOfAppointment: date,
-				startTime: start,
-				endTime: end,
-				subject: code,
-				venue: location
-			}; 	 
-			i+=1;
-		}
+///////////////////////////////////////////////////////////
 		//Find and display on IDE each appointment that is added
-		/*function showAppointment(){
-			alert(appointmentArr[i-1].endTime);
-		}*/
 		function showAppointment(){
-	 	 var counter = 1;
-     		 var table = document.getElementById("tableOne");
-     		 var row = table.insertRow(counter);
-     		 var tPriority = row.insertCell(0);
-     		 var tDate = row.insertCell(1);
-     		 var tStart = row.insertCell(2);
-     		 var tEnd = row.insertCell(3);
-     		 var tSubject = row.insertCell(4);
-     		 var tVenue = row.insertCell(5);
-   		//add text
-     		tPriority.innerHTML = appointmentArr[i-1].priorityStatus;
-     		tDate.innerHTML = appointmentArr[i-1].dateOfAppointment;
-     		tStart.innerHTML = appointmentArr[i-1].startTime;
-     		tEnd.innerHTML = appointmentArr[i-1].endTime;
-     		tSubject.innerHTML = appointmentArr[i-1].subject;
-     		tVenue.innerHTML = appointmentArr[i-1].venue
-	 	}
-		function isValidDate(){
-		 var dateString = newDate.split('/');
-		 var thirtyDayMonth =[4,6,9,11];
-	       	 var thirtyOneDayMonth = [1,3,5,7,8,10,12];
-		 var checkMonth;
-		 var year;
-		 var leapYear = false;
-		 var month = parseInt(dateString[1]);
-		 var day = parseInt(dateString[0]);
-		 var daysInMonth;
-		 var validMonth = false;
-	 	 var validDay = false;
-		 var validYear = false;
-		 validDate=false;
-		while (validDay == false || validMonth == false || validYear == false){
-			isValidYear();
-			isLeapYear();
-			isValidMonth();
-			daysInMonthFunc();
-			isValidDay();
+		    var table = document.getElementById("tableOne");
+			if (appointmentArr.length == 1){
+				var header = table.createTHead();
+				var hRow = header.insertRow(0);
+				var hPriority = hRow.insertCell(0);
+				var hDate = hRow.insertCell(1);
+				var hStart = hRow.insertCell(2);
+				var hEnd = hRow.insertCell(3);
+				var hSubject = hRow.insertCell(4);
+				var hVenue = hRow.insertCell(5);
+				hPriority.innerHTML = '<b>Priority</b>';
+				hDate.innerHTML = '<b>Date</b>';
+				hStart.innerHTML = '<b>Start</b>';
+				hEnd.innerHTML = '<b>End</b>';
+				hSubject.innerHTML = '<b>Subject</b>';
+				hVenue.innerHTML = '<b>Venue<b/>';
+			}
+			var row = table.insertRow(appointmentArr.length);
+			var tPriority = row.insertCell(0);
+     		var tDate = row.insertCell(1);
+     		var tStart = row.insertCell(2);
+     		var tEnd = row.insertCell(3);
+     		var tSubject = row.insertCell(4);
+     		var tVenue = row.insertCell(5);
+			tPriority.innerHTML = appointmentArr[(appointmentArr.length)-1].priorityStatus;
+			tDate.innerHTML = appointmentArr[(appointmentArr.length)-1].dateOfAppointment;
+			tStart.innerHTML = appointmentArr[(appointmentArr.length)-1].startTime;
+			tEnd.innerHTML = appointmentArr[(appointmentArr.length)-1].endTime;
+			tSubject.innerHTML = appointmentArr[(appointmentArr.length)-1].subject;
+			tVenue.innerHTML = appointmentArr[(appointmentArr.length)-1].venue;
+			document.getElementById("buttons1").innerHTML = '<p align="center"><input type="button"  value="Randomise Appointment" onclick="shuffleAppointments()"/> | <input type="button"  value="Sort Appointment" onclick="sortAppointment()"/> by <select id="sortDropdown"><option>Priority</option><option>Date</option><option>Start</option><option>End</option><option>Subject</option><option>Venue</option></select></p><hr />';
+			document.getElementById("buttons2").innerHTML ='<p align="center"><input type="button"  value="Summary" onclick="tallyAppointments()"/></p><hr />';
+			document.getElementById("buttons3").innerHTML ='<p align="center"><input type="button"  value="Search" onclick="searchAppointment()"/> <input type="text"  id="searchTerm" /></p>';
+		}
+///////////////////////////////////////////////
+		function tallyAppointments() {
+			
+			for (var i = 0; i < appointmentArr.length; i++){
+				tempDate = appointmentArr[i].dateOfAppointment;
+			}
+			var table = document.getElementById("tableTwo");
+			var header = table.createTHead();
+			var hRow = header.insertRow(0);
+			var hDates = hRow.insertCell(0);
+			var hAppointments = hRow.insertCell(1);
+			hDates.innerHTML = '<b>Date</b>';
+			hAppointments.innerHTML = '<b>Appointments</b>';
+		}
+///////////////////////////////////////////////
+		function searchAppointment(){
+			var table = document.getElementById("tableThree");
+			var header = table.createTHead();
+			var hRow = header.insertRow(0);
+			var hPriority = hRow.insertCell(0);
+			var hDate = hRow.insertCell(1);
+			var hStart = hRow.insertCell(2);
+			var hEnd = hRow.insertCell(3);
+			var hSubject = hRow.insertCell(4);
+			var hVenue = hRow.insertCell(5);
+			hPriority.innerHTML = '<b>Priority</b>';
+			hDate.innerHTML = '<b>Date</b>';
+			hStart.innerHTML = '<b>Start</b>';
+			hEnd.innerHTML = '<b>End</b>';
+			hSubject.innerHTML = '<b>Subject</b>';
+			hVenue.innerHTML = '<b>Venue<b/>';
+		}
+///////////////////////////////////////////////
+		function shuffleAppointments(){
+			for (var i = 0; i < appointmentArr.length; i++){
+				document.getElementById("tableOne").deleteRow(1);
+			}
+			document.getElementById("tableOne").deleteTHead();
+			var lengthRemaining = appointmentArr.length;
+			var random;
+			var temp;
+			while(lengthRemaining>1){
+				random = Math.floor(Math.random() * lengthRemaining);
+				temp = appointmentArr[lengthRemaining-1];
+				appointmentArr[lengthRemaining-1] = appointmentArr[random];
+				appointmentArr[random] = temp;
+				lengthRemaining--;
+			}
+			var table = document.getElementById("tableOne");
+			var header = table.createTHead();
+			var hRow = header.insertRow(0);
+			var hPriority = hRow.insertCell(0);
+			var hDate = hRow.insertCell(1);
+			var hStart = hRow.insertCell(2);
+			var hEnd = hRow.insertCell(3);
+			var hSubject = hRow.insertCell(4);
+			var hVenue = hRow.insertCell(5);
+			hPriority.innerHTML = '<b>Priority</b>';
+			hDate.innerHTML = '<b>Date</b>';
+			hStart.innerHTML = '<b>Start</b>';
+			hEnd.innerHTML = '<b>End</b>';
+			hSubject.innerHTML = '<b>Subject</b>';
+			hVenue.innerHTML = '<b>Venue<b/>';
+			for (var i = 0; i < appointmentArr.length; i++){
+				var row = table.insertRow(i+1);
+				var tPriority = row.insertCell(0);
+				var tDate = row.insertCell(1);
+				var tStart = row.insertCell(2);
+				var tEnd = row.insertCell(3);
+				var tSubject = row.insertCell(4);
+				var tVenue = row.insertCell(5);
+				tPriority.innerHTML = appointmentArr[i].priorityStatus;
+				tDate.innerHTML = appointmentArr[i].dateOfAppointment;
+				tStart.innerHTML = appointmentArr[i].startTime;
+				tEnd.innerHTML = appointmentArr[i].endTime;
+				tSubject.innerHTML = appointmentArr[i].subject;
+				tVenue.innerHTML = appointmentArr[i].venue;
+			}
+		}
+///////////////////////////////////////////////
+		function isValidDate(date){
+			day = parseInt(date.substring(0,2));
+			month = parseInt(date.substring(3,5));
+			year = parseInt(date.substring(6,10));
+			if ((month >= 1) && (month <= 12) && (day >= 1) && (day <= daysInMonth(month, year)) && (year > 1583)) {
+				return true;
+			}
+			alert('The date input is invalid. Please check the date input.');
+			return false;
+		}
+		//
+		function daysInMonth(month, year){
+			if (month == 4 || month == 6 || month == 9 || month == 11){
+				return 30;
+			} else  if (month == 2){
+				if ((year % 400) == 0 || ((year % 4) == 0 && (year % 100) !== 0)) {
+					return 29;
+				} else {
+					return 28;
+				}
+			} else {
+				return 31;
+			}
 		} 
-		validMonth = false;
-		validYear = false;
-		validDay = false;
-		return newDate = day+'/'+month+'/'+year;
-
-		function isValidYear(){
-			//converts two digit entry to four digit for analysis ie. 2018
- 			if(dateString[2].length<=2){ year = 2000 + parseInt(dateString[2])} 
- 				else {year = parseInt(dateString[2])}
-			//check if year is valid
-			while(year<1583){
-				alert('Year is not valid');
-				year = prompt('Please insert new year more recent than 1583',);
-			} return validYear = true
+///////////////////////////////////////////////
+		function isValidTime(start, end) {
+			if (parseInt(start) >=800 && parseInt(start) <=1800 && parseInt(end) >= 800 && parseInt(end) <= 1800 && parseInt(start) < parseInt(end)) {
+				return true;
+			}
+			alert('The time input is invalid. Please check the start and end times.');
+			return false;
 		}
-		function isLeapYear(){
-			if ((year % 400) == 0 || (year % 4) == 0 && (year % 100) != 0){
-			leapYear = true
-			} else{leapYear = false}
+///////////////////////////////////////////////		
+		function isConcurrentAppointment(date, start, end) {
+			for (var i = 0; i < appointmentArr.length; i++){
+				if (date == appointmentArr[i].dateOfAppointment && end > appointmentArr[i].startTime && end < appointmentArr[i].endTime){
+					alert('The appointment clashes with another appointment. Please check date and time.');
+					return true;
+				} else if (date == appointmentArr[i].dateOfAppointment && start < appointmentArr[i].endTime && start > appointmentArr[i].startTime){
+					alert('The appointment clashes with another appointment. Please check date and time.');
+					return true;
+				} else if (date == appointmentArr[i].dateOfAppointment && start == appointmentArr[i].startTime){
+					alert('The appointment clashes with another appointment. Please check date and time.');
+					return true;
+				} else if (date == appointmentArr[i].dateOfAppointment && end == appointmentArr[i].endTime) {
+					alert('The appointment clashes with another appointment. Please check date and time.');
+					return true;
+				}
+			}
+			return false;
 		}
-		function isValidMonth(){
-		while (month<1 || month>12 ){
-		alert('Month is not valid');
-		month = prompt('Please insert new month,','1-12')
-		} return validMonth = true
-		}
-		function daysInMonthFunc(){
-  		if (thirtyDayMonth.indexOf(month) != -1 ){
-  			daysInMonth = 30
-  		}
-	  	else if (leapYear == true && month == 2){
-			daysInMonth = 29
-		}
-  		else if (thirtyOneDayMonth.indexOf(month) != -1 ){
-  			daysInMonth = 31
-    		}else {daysInMonth = 28};			
-		} 
-		function isValidDay(){
-		 while (day<1 || daysInMonth<day){
-			alert('Day is not valid');
-			day = prompt('Please insert new day',);
-		} return validDay = true
-		}
-	}
-      function isValidTime(){
-		//while(dateValid == true){  //date must be valid before proceeding to time validation
-		var startTime = newStart;
-		var endTime = newEnd; 
-  		while(startTime<=VALID_START || startTime>=VALID_END||endTime<=VALID_START||endTime>=VALID_END){
-    		alert('Times outside of allowable hours');
-    		startTime = parseInt(prompt('Enter start time',));
-   			endTime = parseInt(prompt('Enter end time',));  
-   		}
-   		while (startTime>=endTime){ 
-   		 	alert ('Start time after end time');
-   			startTime = parseInt(prompt('Re-enter start time'));
-  			endTime = parseInt(prompt('Re-enter end time'));
-  		} timeValid = true;
-    	if (timeValid == true){ 
-    		newStart = startTime;
-    		newEnd = endTime;
-    		timeValid = false;
-    	}
- } 
-      
-			//document.writeln('</table>');
 		//MAIN CODE
 		</script>
 			<style>
@@ -189,7 +235,19 @@
 				display: table;
 				clear: both;
 			}
-			input[type=text] {
+			input[id=subject] {
+				width: 100%;
+				padding: 12px;
+				border: 5px solid #ccc;
+				border-radius: 10px;
+			}
+			input[id=venue] {
+				width: 100%;
+				padding: 12px;
+				border: 5px solid #ccc;
+				border-radius: 10px;
+			}
+			input[id=date] {
 				width: 100%;
 				padding: 12px;
 				border: 5px solid #ccc;
@@ -286,10 +344,10 @@
 				<div class="col-2">
 					<div class="wrapperradio">
 						<div class="radio1">
-							<input type="radio" id="priorityHigh" name="prioritycheck" value=1 checked />High
+							<input  id="priorityHigh" type="radio"  name="priority" value="1" checked />High
 						</div>
 						<div class="radio2">
-							<input type="radio" id="priorityLow" name="prioritycheck" value=1 />Low
+							<input id="priorityLow" type="radio"  name="priority" value="2"/>Low
 						</div>
 					</div>
 					<input type="text"  id="subject" />
@@ -341,18 +399,13 @@
 					</div>
 				</div>
 			</div>
-			<h2 align='center'><input type="button"  value="Add Appointment" onclick="addAppointment()"/></h2>
-<table id= "tableOne" border = "1">
-  <tr>
-    <th>Priority</th>
-    <th>Date</th>
-    <th>Start</th>
-    <th>End</th>
-    <th>Course</th>
-    <th>Venue</th>
-  </tr>
-</table>
-
+			<h2 align='center'><input type="button"  value="Add Appointment" onclick="addAppointment()"/></h2><hr />
 		</form>
+			<table id= "tableOne" border = "1" align="center"></table>
+			<p id="buttons1"></p>
+			<table id= "tableTwo" border = "1" align="center"></table>
+			<p id="buttons2"></p>
+			<table id= "tableThree" border = "1" align="center"></table>
+			<p id="buttons3"></p>
     </body>
 </html>
