added searchAppointment() function

--- a/workingMain.html
+++ b/workingMain.html
@@ -92,10 +92,10 @@
 			hDates.innerHTML = '<b>Date</b>';
 			hAppointments.innerHTML = '<b>Appointments</b>';
 		}
-///////////////////////////////////////////////
+//////////////////////////////////////////////
 		function searchAppointment(){
-			var table = document.getElementById("tableThree");
-			var header = table.createTHead();
+			var table3 = document.getElementById("tableThree");
+			var header = table3.createTHead();
 			var hRow = header.insertRow(0);
 			var hPriority = hRow.insertCell(0);
 			var hDate = hRow.insertCell(1);
@@ -109,7 +109,31 @@
 			hEnd.innerHTML = '<b>End</b>';
 			hSubject.innerHTML = '<b>Subject</b>';
 			hVenue.innerHTML = '<b>Venue<b/>';
-		}
+		//Call for input of search term from user, implement variables required for comparison function
+		sTerm = document.getElementById('searchTerm').value;
+		index = appointmentArr.length;
+		text = "";
+		//invoke comparison function and provide output as an alert
+		compareTerms(sTerm,index);
+		document.getElementById("tableThree").innerHTML +=
+		function compareTerms(sTerm,index){
+			var x;
+			//if location in index is less than 0 to exit the function
+			if (index<0){
+				return false}
+			//compare all elements in object to the search term, add to result text if that 
+			//object contains search term
+			else { for (x in appointmentArr[index]){
+					if (appointmentArr[index][x]==sTerm) {
+						var tr ="<tr>";
+						for (x in appointmentArr[index]){tr +="<td>"+appointmentArr[index][x]+"</td>";}
+						tr += "</tr>"
+						text += tr;
+					}
+				}
+			//to recursively work through the objects in the array
+			return compareTerms(sTerm,index-1);
+			}}}
 ///////////////////////////////////////////////
 		function shuffleAppointments(){
 			for (var i = 0; i < appointmentArr.length; i++){
