--- a/workingMain.html
+++ b/workingMain.html
@@ -119,8 +119,7 @@
 		function compareTerms(sTerm,index){
 			var x;
 			//if location in index is less than 0 to exit the function
-			if (index<0){
-				return false}
+			if (index<0){return false}
 			//compare all elements in object to the search term, add to result text if that 
 			//object contains search term
 			else { for (x in appointmentArr[index]){
