--- a/workingMain.html
+++ b/workingMain.html
@@ -13,7 +13,7 @@
 		var newVenue = '';
 		var i = 0;
 		var searchTableRowNumbers = 0;
-		
+		var onceRun = 0;
 		//CONSTANTS
 		//FUNCTIONS 
           	
@@ -81,8 +81,59 @@
 		}
 ///////////////////////////////////////////////
 		function tallyAppointments() {
-			//CODE TO GO HERE!!!!!
-		}
+			// Variables
+			var table2 = document.getElementById("tableTwo");
+			var index = appointmentArr.length-1;
+			var dates = new Array;
+			var tally = new Array;
+			var counter = 1
+			//If function hasn't been run create table, if not call delete function to remove body.
+			if(onceRun==0){
+						var header = table2.createTHead();
+						var hRow = header.insertRow(0);
+						var hDates = hRow.insertCell(0);
+						var hAppointments = hRow.insertCell(1);
+							hDates.innerHTML = '<b>Date</b>';
+							hAppointments.innerHTML = '<b>Appointments</b>';}
+								else{deleteFunction()}
+
+			// Script
+			//using findDates function to iterate over the different elements in the array.
+			findDates(index);
+			//sorts dates
+			dates.sort((date1, date2) => {
+    					date1 = date1.split('-').reverse().join('-');
+    					date2 = date2.split('-').reverse().join('-');
+    					if (date1 < date2) {
+        					return -1;
+    					} else if (date1 > date2) {
+        					return 1;
+    					} else {return 0;}});	
+    			//reduce and compare elements in dates, add to tally
+ 			tally = dates.reduce((t, v) => (t[v] = (t[v] || 0) + 1, t), {});
+			for (x in tally){
+					//insert the rows into the table with the results
+					var row = table2.insertRow(counter);
+					var tDates = row.insertCell(0);
+		     		var tAppointments = row.insertCell(1);
+				tDates.innerHTML=x;
+				tAppointments.innerHTML=tally[x] 
+				counter ++
+			}
+				function findDates(i){
+					if (i <0){return false}
+					else{dates[i] = appointmentArr[i].dateOfAppointment}
+						return findDates(i-1)
+				}
+				function deleteFunction() {
+					var mTable = document.getElementById("tableTwo");
+						var rowCount = mTable.rows.length;
+						for (var x=rowCount-1; x>0; x--) {
+   								mTable.deleteRow(x);
+							}
+				}
+			onceRun +=1
+			return onceRun}
 //////////////////////////////////////////////
 		function searchAppointment(){
 			// Variables
